--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CurrencyApp</string>
+    <string name="exchange_rates">Kursy walut</string>
+    <string name="ATM">Bankomaty</string>
+    <string name="exchange_calculator">Kalkulator walut</string>
 </resources>
