CUR-12 dodanie modelu zapytania o miejsca do google maps i zaimplementowanie funkcjonalnosci szukania bankomatow w okolicy.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="AllATM">Wszystkie Bankomaty</string>
 
     <string-array name="ATMs">
+        <item>Wybierz</item>
         <item>@string/AllATM</item>
         <item>PKO</item>
         <item>mBank</item>
